# ha-daikinone

./: .gitignore  README.md  Taskfile.yml  docker-compose.yaml  hacs.json  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-Bug-report.yaml  1-enhancement-request.yaml
.github/workflows/: ci.yaml  hacs.yaml  hassfest.yaml
custom_components/daikinone/: __init__.py  climate.py  config_flow.py  const.py  daikinone.py  diagnostics.py  entity.py  exceptions.py  fields.py  icons.json  manifest.json  select.py  sensor.py  test_daikin.py  utils.py
custom_components/daikinone/client/: client.py  fields.py  mapping.py  models.py  transport.py  wire.py
custom_components/daikinone/translations/: en.json
dev/: configuration.yaml  release.sh
docs/: dashboard.yaml
tests/: __init__.py  test_entity.py  test_garbage_data_filter.py  test_mapping.py  test_wire.py
