[project]
name = "ha-daikinone"
version = "0.1.0"
description = "Daikin One+ integration for Home Assistant"
authors = [{ name = "Zach Langbert", email = "zach.langbert@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.14.2"

dependencies = [
    "homeassistant~=2026.4.0",
    "pydantic~=2.13.1",
    "backoff~=2.2.1"
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
